--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Abnlookup</string>
+    <string name="set">Set</string>
+    <string name="cancel">Cancel</string>
 </resources>
